this is just begining

--- a/site/new.html
+++ b/site/new.html
@@ -1,1 +1,15 @@
-
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>
+		heading elements
+	</title>
+<body>
+	<h1>hi</h1>
+	<h2>this</h2>
+	<h3>is</h3>
+	<h4>alluri</h4>
+</body>	
+</head>
+</html>
